--- a/_data/locales/ko-KR.yml
+++ b/_data/locales/ko-KR.yml
@@ -10,11 +10,11 @@ layout:
 # The tabs of sidebar
 tabs:
   # format: <filename_without_extension>: <value>
-  home: 홈
+  home: Home
   categories: 카테고리
   tags: 태그
   archives: 아카이브
-  about: 정보
+  about: About Me
 
 # the text displayed in the search bar & search results
 search:
