feature: 방명록 및 건의사항 tab 추가

--- a/_data/locales/ko-KR.yml
+++ b/_data/locales/ko-KR.yml
@@ -15,6 +15,7 @@ tabs:
   tags: 태그
   archives: 아카이브
   about: About Me
+  issues: 방명록 및 건의사항
 
 # the text displayed in the search bar & search results
 search:
