--- a/_posts/2024-03-28-jpa-book1.markdown
+++ b/_posts/2024-03-28-jpa-book1.markdown
@@ -5,7 +5,7 @@ date: 2024-03-28 18:57:01 +0900
 categories: [ 책, 자바 ORM 표준 JPA 프로그래밍 ]
 ---
 
-# 자바 ORM 표준 JPA 프로그래밍
+# 자바 ORM 표준 JPA 프로그래밍1
 
 > 김영한 지음
 
