--- a/_posts/2024-03-28-jpa-book1.markdown
+++ b/_posts/2024-03-28-jpa-book1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "자바 ORM 표준 JPA"
+title: "자바 ORM 표준 JPA1"
 date: 2024-03-28 18:57:01 +0900
 categories: [ 책, 자바 ORM 표준 JPA 프로그래밍 ]
 ---
