- 데이터베이스 설계 및 구축 3

--- a/_posts/2024-05-05-db-design3.markdown
+++ b/_posts/2024-05-05-db-design3.markdown
@@ -99,10 +99,12 @@ ERD 의 기본 요소인 엔티티, 관계, 속성에 대해서 검토할 필요
 
 ### M:N 관계의 해소
 
-M:N 관계에 있는 엔티티는 1:N, N:1 관계로 조정해야 한다. 둘 사이의 공유하는 속성이 없기에, 관계를 맺어주기 위해 어느 한쪽에 공유 속성을 넣게 되면 이상한 결과가 나타난다.
+M:N 관계에 있는 엔티티는 1:N, N:1 관계로 조정해야 한다. 둘 사이의 공유하는 속성이 없기에, 관계를 맺어주기 위해 어느 한쪽에 공유 속성을 넣게 되면 이상한 결과가
+나타난다.
 
-### ㅍ프로세스 모델과의 통합 검토
+### 프로세스 모델과의 통합 검토
 
-프로세스 모델과 데이터 모델의 통합 검토가 필요하며 이ㅔ를 상관 모델링이라고 부른다. CRUD 매트릭스를 활용한다. 세로축에는 프로세스명을 나열하고, 가로축에는 엔티티 이름을 나열한다.
+프로세스 모델과 데이터 모델의 통합 검토가 필요하며 이ㅔ를 상관 모델링이라고 부른다. CRUD 매트릭스를 활용한다. 세로축에는 프로세스명을 나열하고, 가로축에는 엔티티 이름을
+나열한다.
 <br>
 어떤 엔티티가 올바른 엔티티라면 반드시 그 엔티티를 생성하는 프로세스가 있어야 하고, 조회하는 프로세스가 있어야 한다.
