--- a/_posts/2024-03-28-jpa-book2.markdown
+++ b/_posts/2024-03-28-jpa-book2.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "자바 ORM 표준 JPA2"
 date: 2024-03-29 18:57:01 +0900
-categories: [ 책, 자바 ORM 표준 JPA 프로그래밍 ]
+categories: [ 독서, 자바 ORM 표준 JPA 프로그래밍 ]
 ---
 
 # 자바 ORM 표준 JPA 프로그래밍2
