--- a/_posts/2024-05-11-db-design4.markdown
+++ b/_posts/2024-05-11-db-design4.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "데이터베이스 설계 및 구축 3"
 date: 2024-05-11 14:02:01 +0900
-categories: [ 책, 데이터베이스 설계 및 구축 ]
+categories: [ 독서, 데이터베이스 설계 및 구축 ]
 ---
 
 # 데이터베이스 설계 및 구축(11-12장)
