✨ feat: 모든 문단 시작 전에 들여쓰기 되도록 수정

--- a/_posts/2024-03-30-jpa-book4.markdown
+++ b/_posts/2024-03-30-jpa-book4.markdown
@@ -59,7 +59,7 @@ String sql="SELECT ID, AGE From MEMBER WHERE ANME = 'kim'";
 ### JPQL
 
 별칭은 필수이다. 별칭이 없으면 잘못된 문법이라는 오류가 발생한다.
-<br>
+<br><span>
 TypeQuery 를 사용해서 반환 타입을 지정할 수 있다.
 
 ```java
@@ -242,7 +242,7 @@ int resultCount=em.createQuery(qlString)
 ```
 
 벌크 연산은 executeUpdate() 메소드를 사용한다.
-<br>
+<br><span>
 벌크 연산은 영속성 컨텍스트를 무시하고 데이터베이스에 직접 쿼리한다. 따라서 영속성 컨텍스트에 있는 상품과 데이터베이스의 상품 가격이 다를 수 있다.
 
 - em.refresh() 를 사용해서 데이터베이스에서 연산 처리된 상품을 다시 조회하게 할 수 있다.
