--- a/_posts/2024-04-05-jpa-book5.markdown
+++ b/_posts/2024-04-05-jpa-book5.markdown
@@ -17,16 +17,16 @@ JPA 에서 교과서로 유명한 책을 읽고 일부 부분을 메모해봤습
 
 트랜잭션 범위의 영속성 컨텍스트 전략을 기본으로 사용한다. 트랜잭션이 시작할 때 영석송 컨텍스트를 생성하고 트랜잭션이 끝날 때 영속성 컨텍스트를 종료한다. 같은 트랜잭션 안에서는
 항상 같은 영속성 컨텍스트에 접근한다.
-<br>
+<br><span>
 트랜잭션이 다르면 다른 영속성 컨텍스트를 사용한다. 멀티쓰레드 상황에서도, 트랜잭션을 다르게 사용하면 다른 영속성 컨텍스트를 사용한다.
 
 ### 준영속 상태와 지연 로딩
 
 컨테이너 환경의 기본 전략을 사용하면, 트랜잭션이 없는 계층(service layer 이상의 계층)에서 엔티티는 준영속 상태다. 변경 감지 기능이나, 지연 로딩과 같은 기능이
 작동되지 않는 것이다.
-<br>
+<br><span>
 준영속 상태의 지연 로딩 문제를 해결하기 위해서는, 뷰가 필요한 엔티티를 미리 로딩해두거나, OSIV 를 사용하는 방법이 있다.
-<br>
+<br><span>
 즉시 로딩으로 하는 경우, N+1 문제가 발생할 수 있기에 이런 경우에 JPQL 페치 조인 방법을 고려해보자.
 
 ### FACADE 계층 추가
@@ -74,7 +74,7 @@ OSIV 의 단점
 
 하이버네이트는 엔티티를 영속 상태로 만들 때 컬렉션 필드를 하이버네이트에서 준비한 컬렉션으로 감싸서 사용한다. 하이버네이트는 컬렉션을 효율적으로 관리하기 위해 엔티티를 영속 상태로
 만들 때 원본 컬렉션을 감싸고 있는 내장 컬렉션을 생성해서 내장 컬렉션을 사용하도록 참조를 변경한다.
-<br>
+<br><span>
 이런 특징 때문에 컬렉션을 사용할 때, 즉시 초기화해서 사용하는 것을 권장한다.
 
 ```java
