--- a/_posts/2024-04-06-jpa-book6.markdown
+++ b/_posts/2024-04-06-jpa-book6.markdown
@@ -17,10 +17,10 @@ JPA 에서 교과서로 유명한 책을 읽고 일부 부분을 메모해봤습
 
 JPA 표준 예외들은 javax.persistence.PersistenceException 의 자식 클래스다. 이 예외 클래스는 RuntimeException 의 자식이다. 따라서
 JPA 예외는 모두 언체크 예외다.
-<br>
+<br><span>
 트랜잭션 롤백을 표시하는 예외와, 트랜잭션 롤백을 표시하지 않는 예외로 나눌 수 있다. 후자의 경우에는 개발자가 트랜잭션 롤백 처리를 하도록 할 수 있다. 그러나 이 때, db 의
 반영 사항만 롤백하는 것이지, 수정한 자바 객체까지 복구해주는 것은 아님을 알아야 한다.
-<br>
+<br><span>
 따라서 트랜잭션이 롤백된 경우엔, 새로운 영속성 컨텍스트를 사용하거나 EntityManager.clear 를 호출해서 초기화를 진행해야 한다.
 
 ### 엔티티 비교
@@ -104,7 +104,7 @@ select O from ORDERS O where O.member_id  in (
 ### 읽기 전용 쿼리 성능 최적화
 
 영속성 컨텍스트에 관리되는 엔티티는 1차 캐시부터 변경 감지까지 얻을 수 있는 혜택이 많다. 하지만, 변경 감지를 위해 스냅샷 인스턴스를 보관하는 것은 메모리 비용이 든다.
-<br>
+<br><span>
 따라서, 읽기 전용으로 엔티티를 조회하면 메모리 사용을 최적화할 수 있다. 스프링 프레임워크를 사용하면 트랜잭션을 읽기 전용 모드로 설정할 수 있다.
 
 ```java
@@ -118,7 +118,7 @@ select O from ORDERS O where O.member_id  in (
 ### 배치 처리
 
 배치 처리는 적절한 단위로 영속성 컨텍스트를 초기화해야 하며, 2차 캐시를 사용하고 있다면 2차 캐시에 엔티티를 보관하지 않도록 주의해야 한다.
-<br>
+<br><span>
 ```java
 
 em.flush();
@@ -155,5 +155,5 @@ select
 ### 쓰기 지연과 성능 최적화
 
 JDBC 가 제공하는 SQL 배치 기능을 사용하면 SQL 을 모아서 데이터베이스에 한 번에 보낼 수 있다. JPA 는 플러시 기능이 있으므로 SQL 배치 기능을 효과적으로 사용할 수 있다.
-<br>
+<br><span>
 이 기능 덕분에 db 테이블 로우에 락이 걸리는 시간을 최소화 할 수 있다.
