--- a/_posts/2024-04-18-db-key.markdown
+++ b/_posts/2024-04-18-db-key.markdown
@@ -38,7 +38,7 @@ private Long id;
 - 주로 고유 식별자(Primary Key)가 이 원칙을 충족시키며, 보조 키(Secondary Key)들도 가능한 한 유일해야 합니다.
 
 이 중 유일성 만을 만족하는 속성의 조합을 **슈퍼키**라고 부르고, 2개의 기본 원칙을 만족하는 DB 내의 키를 **후보키**라고 부릅니다.
-<br>
+<br><span>
 이러한 후보키 중에서 선택된 키를 **기본키**라고 하며, 선택되지 않은 키를 **대체키**라고 합니다.
 
 ## 대리키를 사용하는 이유
