--- a/_posts/2024-04-23-jpa-jpql.markdown
+++ b/_posts/2024-04-23-jpa-jpql.markdown
@@ -35,19 +35,19 @@ categories: [ JPA ]
 ```
 
 DB 에서 조회한 엔티티와 영속성 컨텍스트를 비교하는 기준은 Equality 입니다. 이는 동등성을 의미합니다. 엔티티의 동등성을 판별하기 위해서 우리는 엔티티에 @Id 를 부여했습니다.
-<br>
+<br><span>
 이 id 값을 기준으로 엔티티의 동등성을 확인하여 영속성 컨텍스트 내부에는 유일한 엔티티만이 존재할 수 있는 것입니다.
-<br>
+<br><span>
 그렇다면 JPQL 을 통해 조회한 값보다 영속성 컨텍스트 내부에 존재하는 값을 우선시하는 이유는 뭘까요? 이는 JPA 에서 1 차 캐시를 통해 Repeatable Read 등급의 트랜잭션 격리 수준을 제공하기 위함입니다.
-<br>
+<br><span>
 만약에 JPQL 을 통해 가져온 값을 영속성 컨텍스트 내부에 존재하는 값보다 우선시한다면 어떻게 될까요? 영속성 컨텍스트 내에 존재하던 변경 사항이 사라질 수도 있고, 앞서 조회한 엔티티와 중간에 조회한 엔티티의 값이 달라질 수 있습니다.
-<br>
+<br><span>
 
 ## 결론
 
 엔티티의 조회는 영속성 컨텍스트에 존재하는 엔티티를 우선합니다. 영속성 컨텍스트에 존재하는 유일한 엔티티를 식별하기 위해서는 id 를 확인합니다.
 
-<br>
+<br><span>
 
 ### 참고
 - https://www.baeldung.com/jpa-entity-equality
