--- a/_posts/2024-05-03-db-design1.markdown
+++ b/_posts/2024-05-03-db-design1.markdown
@@ -114,7 +114,7 @@ DB 가 일정한 성능을 유지할 수 있도록 비효율적인 요소를 제
 ## 엔티티
 
 엔티티는 업무의 관심 대상이 되는 정보를 갖고 있거나, 그에 대한 정보를 관리할 필요가 있는 유형, 무형의 개체를 말한다.
-<br>
+<br><span>
 엔티티는 다음과 같은 성질을 만족해야 한다.
 
 1. 업무에서의 필요성 : 업무의 관심 대상이 되어야 한다.
