--- a/_posts/2024-05-05-db-design2.markdown
+++ b/_posts/2024-05-05-db-design2.markdown
@@ -40,7 +40,7 @@ categories: [ 독서, 데이터베이스 설계 및 구축 ]
 ## 엔티티
 
 현실 업무에 대한 자료 수집 및 정리 작업 이후에는 모델링 단계로 넘어간다. 데이터 모델링에서는 ERD 라는 수단을 통하여 모델링을 진행한다.
-<br>
+<br><span>
 
 ### 엔티티란
 
@@ -99,7 +99,7 @@ categories: [ 독서, 데이터베이스 설계 및 구축 ]
 ### 업무 규칙
 
 부모 테이블의 튜플이 삭제되거나 수정되었을 때의 처리 규칙과, 자식 테이블에 새로운 튜플이 추가되거나 수정될 떄의 처리 규칙으로 분류할 수 있다.
-<br>
+<br><span>
 부모 테이블의 튜플에 대한 삭제 규칙은 다음과 같다.
 - restrict : 부모 테이블에 있는 값을 자식 테이블에서 참조하고 있다면 부모 테이블에 있는 값은 삭제할 수 없다.
 - cascade : 부모 테이블에 있는 값을 삭제하면 그것을 참조하는 자식 테이블의 값도 삭제한다.
@@ -109,7 +109,7 @@ categories: [ 독서, 데이터베이스 설계 및 구축 ]
 
 수정 규칙도 동일하다.
 
-<br>
+<br><span>
 
 자식테이블의 튜플에 대한 삽입 / 수정 규칙은 다음과 같다.
 
