--- a/_posts/2024-05-11-db-design4.markdown
+++ b/_posts/2024-05-11-db-design4.markdown
@@ -31,17 +31,17 @@ categories: [ 독서, 데이터베이스 설계 및 구축 ]
 
 반정규화는 정규화와 대비되는 개념으로, 어느 정도 중복은 감수하고 데이터베이스의 성능을 향상시키는 것이다. 엔티티를 통합해 가는 형태로 진행된다.
 
-<br>
+<br><span>
 
 성능상의 문제로 반정규화를 수행한다면, 데이터의 무결성에 문제가 생길 수 있기에 이에 대한 보완책이 필요하다.
 
 ### 엔티티의 통합 / 분할에 의한 반정규화
 
 두 개의 엔티티 a,b 의 조인을 통해서 항상 자료를 검색해야 한다면 a,b 를 통합하는 것이 검색 속도가 빠를 것이다.
-<br>
+<br><span>
 경우에 따라서는, 엔티티를 분할할 수도 있다. 튜필 수 및 속성의 수가 매우 많고, 엔티티의 속성들이 그룹화되어 각 그룹이 특정 부서 혹은 응용프로그램에 의해서만 사용될 때는
 속성에 대해서 수직 분할하는 편이 좋다.
-<br>
+<br><span>
 튜플의 조회 빈도에 따라서 수평분할을 하기도 한다. 20:80 의 법칙에 따르자면 상위 20 % 가 전체 검색의 80% 를 따른다. 따라서 상위 20 % 의 검색 대상에 대해
 구분하여 저장하면 검색 속도의 향상을 꾀할 수 있을 것이다.
 
@@ -63,7 +63,7 @@ categories: [ 독서, 데이터베이스 설계 및 구축 ]
 3. 인덱스에 의한 검색
 4. 순차 접근에 의한 검색
 
-<br>
+<br><span>
 
 인덱스는 저장 공간을 차지하고, 정렬 상태를 유지해야 하기에 튜플이 추가되고 삭제되면 인덱스의 재정렬을 필요로 한다.
 
