--- a/_posts/2024-03-28-jpa-book2.markdown
+++ b/_posts/2024-03-28-jpa-book2.markdown
@@ -54,9 +54,9 @@ public class Album extends Item {
 
 기본적으로 자식 테이블은 부모 테이블의 ID 컬럼명을 그대로 사용한다. 만약 자식 테이블의 기본 키 컬럼명을 변경하고 싶으면 @PrimaryKeyJoinColumn 을 사용하면
 된다.
-<br>
+<br><span>
 장단점을 비교하면 다음과 같다.
-<br>
+<br><span>
 장점
 
 - 테이블이 정규화된다.
@@ -72,7 +72,7 @@ public class Album extends Item {
 ### 단일 테이블 전략
 
 단일 테이블 전략은 테이블을 하나만 사용한다. 구분 컬럼으로 어떤 자식 데이터가 저장되었는지 구분한다.
-<br>
+<br><span>
 장점
 
 - 조인이 필요 없으므로 일반적으로 조회 성능이 빠르다.
@@ -86,7 +86,7 @@ public class Album extends Item {
 ### 구현 클래스마다 테이블 전략
 
 자식 엔티티마다 테이블을 만든다. 자식 테이블에는 각각에 필요한 컬럼이 모두 있다.
-<br>
+<br><span>
 장점
 
 - 서브 타입을 구분해서 처리할 때 효과적이다.
@@ -97,7 +97,7 @@ public class Album extends Item {
 - 여러 자식 테이블을 함께 조회할 때 성능이 느리다.
 - 자식 테이블을 통합해서 쿼리하기 어렵다.
 
-<br> 이 전략은 데이터베이스 설계자와 ORM 전문가 둘 다 추천하지 않는 전략이다. 조인이나 단일 테이블 전략을 고려하자.
+<br><span> 이 전략은 데이터베이스 설계자와 ORM 전문가 둘 다 추천하지 않는 전략이다. 조인이나 단일 테이블 전략을 고려하자.
 
 ### MappedSuperclass
 
