- JVM 시리즈 06   - Shenandoah GC 정리

--- a/_posts/2024-06-06-jvm-03.markdown
+++ b/_posts/2024-06-06-jvm-03.markdown
@@ -13,7 +13,7 @@ categories: [ Java, JVM ]
 - 언제 회수할 것인가
 - 어떻게 회수할 것인가
 
-높은 동시성을 달성하는데 가비지 컬렉션이 방해가 되는 상황이 온다면, 자동화된 기술을 적절히 모니터링하고 조ㅗ율할 수 있어야 한다.
+높은 동시성을 달성하는데 가비지 컬렉션이 방해가 되는 상황이 온다면, 자동화된 기술을 적절히 모니터링하고 조율할 수 있어야 한다.
 
 ## 참조 카운팅 알고리즘
 
