- 모던 소프트웨어 엔지니어링 후가

--- a/_posts/2025-06-21-readbook07.markdown
+++ b/_posts/2025-06-21-readbook07.markdown
@@ -46,4 +46,4 @@ categories: [ 독서 ]
 - ⭐️⭐️ 읽어두면 좋다
 - ⭐️⭐️⭐️ 개발자 필독서 수준
 
-소프트웨어 엔지니어링의 기본기를 다시 한번 점검하고, 개발 조직의 문화에 대해 생각해볼 수 있는 좋은 기회를 제공하는 책입니다.
+소프트웨어 엔지니어링의 기본기를 다시 한번 점검하고, 개발 조직의 문화에 대해 생각해볼 수 있는 좋은 기회를 제공하는 책이었습니다.
